--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 			rel="stylesheet"
 		/>
 		<title>BLOG ESTUDIO</title>
-		<script src="https://kit.fontawesome.com/0b785dc503.js" crossorigin="anonymous"></script>
-
+		<script
+			src="https://kit.fontawesome.com/0b785dc503.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
 		<div id="root"></div>
